--- a/app/Resources/views/default/upload.html.twig
+++ b/app/Resources/views/default/upload.html.twig
@@ -4,11 +4,9 @@
     <div id="wrapper">
         <div id="container">
             <div id="welcome">
-                <h1><span>Ajouter un utilisateur </span></h1>
+                <h1><span>Ajouter un fichier </span></h1>
             </div>
             {{ form_start(form)}}
-            
-                
             {{ form_end(form)}}
 
 
